Some more code cleanup/refactoring